Limit layout width; fix a bit menu links on mobile; make font sizes for menu smaller

--- a/components/Header/header.css
+++ b/components/Header/header.css
@@ -139,6 +139,7 @@ a.header-logo-link {
     padding: 0;
     background: transparent;
     opacity: 1;
+    font-size: 90%;
   }
 }
 
