--- a/components/Menu/menu.css
+++ b/components/Menu/menu.css
@@ -9,25 +9,25 @@
 }
 
 .menu-nav {
-  margin-top: 1em;
+  margin: 2em 0 1em;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
 }
 
 @media (min-width: 768px) {
   .menu-nav {
-    margin-top: 0;
+    margin: 0;
     justify-content: flex-start;
   }
 }
 
 .menu-link {
+  margin: 0 1em;
   color: black;
 }
 
 @media (min-width: 768px) {
   .menu-link {
-    margin-left: 2em;
     text-transform: uppercase;
     letter-spacing: 0.15em;
   }
