--- a/components/PageArticle/page-article.css
+++ b/components/PageArticle/page-article.css
@@ -1,3 +1,7 @@
 .page-article-content {
-  margin: 1em 0 3em;
+  margin: 1em 0 2em;
+}
+
+.page-article-comments {
+  margin-top: 3em;
 }
